# instant-astronomer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  implementation.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-demo.yml
demo/: index.html  package.json  tsconfig.json  vite.config.ts
demo/public/: CNAME  site.webmanifest
demo/src/: main.ts
instant-astronomer-core/: Cargo.toml
instant-astronomer-core/assets/: bright_stars.csv
instant-astronomer-core/src/: cities.rs  fusion.rs  icons.rs  lib.rs  math.rs  stars.rs
instant-astronomer-core/src/widgets/: dynamic_label.rs  horizon_tape.rs  sky_view.rs  status_text.rs  wrapping_row.rs
instant-astronomer-core/src/widgets/sky_view/: hud.rs  moon_phase.rs
instant-astronomer-core/tests/: file_line_count.rs
instant-astronomer-native/: Cargo.toml
instant-astronomer-native/src/: main.rs
instant-astronomer-wasm/: Cargo.toml
instant-astronomer-wasm/src/: lib.rs
